src/test/ui/parser/do-not-suggest-semicolon-before-array.stderr
error: unexpected closing delimiter: `)`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:5:10
   |
LL | fn foo() {}
   |          -- ...matches this closing brace
   |          |
   |          this opening brace...
...
LL |     [1, 3)
   |          ^ unexpected closing delimiter

error: unexpected closing delimiter: `}`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:6:1
   |
LL | fn foo() {}
   |          -- block is empty, you might have not meant to close it
...
LL | }
   | ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/do-not-suggest-semicolon-before-array.rs:8:14
   |
LL | fn bar() -> [u8; 2] {
   |                     - unclosed delimiter
LL |     foo()
LL |     [1, 3)
   |     - unclosed delimiter
...
LL | fn main() {}
   |              ^

error: this file contains an unclosed delimiter
  --> $DIR/do-not-suggest-semicolon-before-array.rs:8:14
   |
LL | fn bar() -> [u8; 2] {
   |                     - unclosed delimiter
LL |     foo()
LL |     [1, 3)
   |     - unclosed delimiter
...
LL | fn main() {}
   |              ^

error: expected one of `,`, `.`, `?`, `]`, or an operator, found keyword `fn`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:8:1
   |
LL |     [1, 3)
   |          - expected one of `,`, `.`, `?`, `]`, or an operator
...
LL | fn main() {}
   | ^^ unexpected token

error: expected one of `.`, `?`, `]`, or an operator, found `,`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:5:7
   |
LL |     [1, 3)
   |       ^ expected one of `.`, `?`, `]`, or an operator

error: aborting due to 6 previous errors

